[Phase-2] Created crossbrowser HEADER

--- a/users/user.html
+++ b/users/user.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>{title}</title>
+    <title>Aleksander Kabanov</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.1">
     <link rel="stylesheet" type="text/css" href="./view/styles/user.css"/>
@@ -14,8 +14,8 @@
     <script type="text/javascript" src="./view/scripts/custom.js"></script>
 </head>
 <body>
-<header class="clearfix container-fluid">
-    <div class="wrapped">
+<header class="clearfix">
+    <div class="wrapped container">
         <div class="logo col-md-4 col-lg-4">
             <a href="./index.php"><h1>Smart People</h1></a>
         </div>
@@ -26,36 +26,28 @@
                         <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                             Учёба <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Iteem1</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Iteem2</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Iteem3</a></li>
+                        <ul class="dropdown-menu header-dropdown">
+                            <li><a href="#"><i class="fa fa-leanpub"></i>Предметы</a></li>
+                            <li><a href="#"><i class="fa fa-graduation-cap"></i>База вузов</a></li>
+                            <li><a href="#"><i class="fa fa-play"></i>Начать курс</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                             Социальная сеть <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Iteem1</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Iteem2</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Iteem3</a></li>
+                        <ul class="dropdown-menu header-dropdown">
+                            <li><a href="#"><i class="fa fa-user"></i> Друзья</a></li>
+                            <li><a href="#"><i class="fa fa-user-secret"></i> Преподователи</a></li>
+                            <li><a href="#"><i class="fa fa-male"></i>Ученики</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                             Идеи и развитие <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Iteem1</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Iteem2</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Iteem3</a></li>
+                        <ul class="dropdown-menu header-dropdown">
+                            <li><a href="#"><i class="fa fa-lightbulb-o"></i> Мои идеи</a></li>
                         </ul>
                     </li>
                     <li class="search">
@@ -66,12 +58,10 @@
                         <button class="dropdown-toggle sign-out" data-toggle="dropdown">
                             <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Iteem1</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Iteem2</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Iteem3</a></li>
+                        <ul class="dropdown-menu header-dropdown dropdown-center">
+                            <li><a href="#"><i class="fa fa-info-circle"></i>О нас</a></li>
+                            <li><a href="#"><i class="fa fa-cog"></i>Настройки</a></li>
+                            <li><a href="#"><i class="fa fa-sign-out"></i>Выход</a></li>
                         </ul>
                     </li>
                 </ul>
