[Phase-2] Created left-side avaatr frame and uploader popup

--- a/users/user.html
+++ b/users/user.html
@@ -69,5 +69,33 @@
         </div>
     </div>
 </header>
+<div class="uploader show-uploader">
+    <div class="form-wrapper">
+        <form class="upload" action="../library/class.upload.php" method="post" enctype="multipart/form-data">
+            <input name="image_file" id="imageInput" type="file" />
+            <button class="btn-success">Загрузить фото</button>
+        </form>
+    </div>
+</div>
+<div class="content">
+    <div class="wrapped container">
+        <div class="col-md-3 col-lg-3">
+            <div class="username">
+                <p>
+                    Aleksander Kabanov
+                </p>
+            </div>
+            <div class="frame">
+                <div class="avatar">
+                    <img src="view/images/no-avatar.jpg" alt="Avatar" class="img-thumbnail"/>
+                    <i class="fa fa-camera"></i>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-9 col-lg-9">
+
+        </div>
+    </div>
+</div>
 </body>
 </html>
