[Phase-2] Created left-side avaatr frame and uploader popup

--- a/users/user.html
+++ b/users/user.html
@@ -87,7 +87,7 @@
             </div>
             <div class="frame">
                 <div class="avatar">
-                    <img src="view/images/no-avatar.jpg" alt="Avatar" class="img-thumbnail"/>
+                    <img src="view/images/noavatar.png" alt="Avatar" class="img-thumbnail"/>
                     <i class="fa fa-camera"></i>
                 </div>
             </div>
