--- a/users/user.html
+++ b/users/user.html
@@ -27,9 +27,9 @@
                             Учёба <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu header-dropdown">
-                            <li><a href="#"><i class="fa fa-leanpub"></i>Предметы</a></li>
-                            <li><a href="#"><i class="fa fa-graduation-cap"></i>База вузов</a></li>
-                            <li><a href="#"><i class="fa fa-play"></i>Начать курс</a></li>
+                            <li><a href="#"><i class="fa fa-graduation-cap"></i>Выбрать предмет</a></li>
+                            <li><a href="#"><i class="fa fa-play"></i>Как заставить себя учиться</a></li>
+                            <li><a href="#"><i class="fa fa-leanpub"></i>Библиотека</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -40,6 +40,7 @@
                             <li><a href="#"><i class="fa fa-user"></i> Друзья</a></li>
                             <li><a href="#"><i class="fa fa-user-secret"></i> Преподователи</a></li>
                             <li><a href="#"><i class="fa fa-male"></i>Ученики</a></li>
+                            <li><a href="#"><i class="fa fa-newspaper-o"></i></i>Новости</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -47,7 +48,8 @@
                             Идеи и развитие <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu header-dropdown">
-                            <li><a href="#"><i class="fa fa-lightbulb-o"></i> Мои идеи</a></li>
+                            <li><a href="#"><i class="fa fa-play"></i>Создать идею</a></li>
+                            <li><a href="#"><i class="fa fa-lightbulb-o"></i>Мои идеи</a></li>
                         </ul>
                     </li>
                     <li class="search">
@@ -60,6 +62,7 @@
                         </button>
                         <ul class="dropdown-menu header-dropdown dropdown-center">
                             <li><a href="#"><i class="fa fa-info-circle"></i>О нас</a></li>
+                            <li><a href="#"><i class="fa fa-envelope"></i>Написать нам</a></li>
                             <li><a href="#"><i class="fa fa-cog"></i>Настройки</a></li>
                             <li><a href="#"><i class="fa fa-sign-out"></i>Выход</a></li>
                         </ul>
@@ -71,15 +74,15 @@
 </header>
 <div class="uploader show-uploader">
     <div class="form-wrapper">
-        <form class="upload" action="../library/class.upload.php" method="post" enctype="multipart/form-data">
-            <input name="image_file" id="imageInput" type="file" />
+        <form class="upload" action="#" method="post" enctype="multipart/form-data">
+            <input name="image_file" type="file" />
             <button class="btn-success">Загрузить фото</button>
         </form>
     </div>
 </div>
 <div class="content">
     <div class="wrapped container">
-        <div class="col-md-3 col-lg-3">
+        <div class="left col-md-3 col-lg-3">
             <div class="username">
                 <p>
                     Aleksander Kabanov
