[Phase-2] Created CREATE PROJECT button

--- a/users/user.html
+++ b/users/user.html
@@ -94,6 +94,9 @@
                     <i class="fa fa-camera"></i>
                 </div>
             </div>
+            <div class="create-project">
+                <button class="btn-success btn-create">Создать проэкт</button>
+            </div>
         </div>
         <div class="col-md-9 col-lg-9">
 
