--- a/users/user.html
+++ b/users/user.html
@@ -97,6 +97,29 @@
             <div class="create-project">
                 <button class="btn-success btn-create">Создать проэкт</button>
             </div>
+            <div class="quote">
+                <div class="quote-frame">
+                    <div class="quote-frame">
+                        <blockquote>Чупачупс зи смаком водки а внутри кусок селодки</blockquote>
+                    </div>
+                </div>
+            </div>
+            <div class="subject-progress">
+                <div class="quote-frame">
+                    <p class="subject">
+                        Математика
+                    </p>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar"
+                             aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
+                             40%
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="use-knowledge">
+                <button class="btn-primary btn-use-klg">Применить знания</button>
+            </div>
         </div>
         <div class="col-md-9 col-lg-9">
 
