--- a/users/user.html
+++ b/users/user.html
@@ -104,15 +104,18 @@
                     </div>
                 </div>
             </div>
-            <div class="subject-progress">
-                <div class="quote-frame">
-                    <p class="subject">
-                        Математика
-                    </p>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar"
-                             aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
-                             40%
+            <div class="panel-group">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">На изучении</div>
+                    <div class="panel-body">
+                        <p class="subject">
+                            Математика
+                        </p>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar"
+                                 aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
+                                40%
+                            </div>
                         </div>
                     </div>
                 </div>
