--- a/users/user.html
+++ b/users/user.html
@@ -125,7 +125,31 @@
             </div>
         </div>
         <div class="col-md-9 col-lg-9">
+            <div class="task-tracker">
+                <div class="calendar col-md-4 col-lg-4">
 
+                </div>
+                <div class="tracker col-md-8 col-lg-8">
+                </div>
+            </div>
+            <div class="wall">
+                <div class="wall-top"><span>Ваши идеи</span></div>
+                <div class="blog"><input type="text" placeholder="Какие у вас мысли? Напишите об этом..."/>
+                    <div class="blog-nav">
+                        <div class="publish-wrapper">
+                        </div>
+                        <div class="attach-wrapper dropdown">
+                            <i class="fa fa-lightbulb-o"></i>
+                            <i class='fa fa-paperclip dropdown-toggle' data-toggle='dropdown'></i>
+                            <ul class="dropdown-menu header-dropdown">
+                                <li><a href="#"><i class="fa fa-picture-o"></i>Фото</a></li>
+                                <li><a href="#"><i class="fa fa-file"></i>Документ</a></li>
+                                <li><a href="#"><i class="fa fa-comments"></i>Опрос</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
