--- a/users/user.html
+++ b/users/user.html
@@ -137,9 +137,10 @@
                 <div class="blog"><input type="text" placeholder="Какие у вас мысли? Напишите об этом..."/>
                     <div class="blog-nav">
                         <div class="publish-wrapper">
+                            <button class="btn-success publish">Опубликовать</button>
                         </div>
                         <div class="attach-wrapper dropdown">
-                            <i class="fa fa-lightbulb-o"></i>
+                            <!--<i class="fa fa-lightbulb-o"></i>-->
                             <i class='fa fa-paperclip dropdown-toggle' data-toggle='dropdown'></i>
                             <ul class="dropdown-menu header-dropdown">
                                 <li><a href="#"><i class="fa fa-picture-o"></i>Фото</a></li>
