--- a/SmartPeopleUI/web/index.html
+++ b/SmartPeopleUI/web/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>Getting Started</title>
-   <link rel="stylesheet" href="styles.css">
+   <title>Smart People</title>
    <script async src="main.dart" type="application/dart"></script>
    <script async src="packages/browser/dart.js"></script>
 </head>
 <body>
-<my-app>Loading...</my-app>
+   Project is starting...
 </body>
 </html>
