--- a/SmartPeopleUI/lib/app-view.html
+++ b/SmartPeopleUI/lib/app-view.html
@@ -1,3 +1,6 @@
-<header class="clearfix"></header>
-<sign-up-control-room></sign-up-control-room>
-<footer></footer>
+<h1>{{title}}</h1>
+<nav>
+   <a [routerLink]="['signup']">SignUp</a>
+   <a [routerLink]="['footer']">Footer</a>
+</nav>
+<router-outlet></router-outlet>
