--- a/SmartPeopleUI/web/index.html
+++ b/SmartPeopleUI/web/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>   <title>Smart People</title>
+<head>
+   <title>Smart People</title>
    <script async src="main.dart" type="application/dart"></script>
    <script async src="packages/browser/dart.js"></script>
 </head>
 <body>
-   Project is starting...
+   <my-app>Project is starting...</my-app>
 </body>
 </html>
