Configured routing and added approved structure

--- a/SmartPeopleUI/lib/welcome/header/header-view.html
+++ b/SmartPeopleUI/lib/welcome/header/header-view.html
@@ -1,6 +1,6 @@
 <div class="wrapped">
    <div class="logo">
-      <a [routerLink]="['/SignUp']" style="color: black">Smart People</a>
+      <a [routerLink]="['SignUp']" style="color: black">Smart People</a>
    </div>
    <div class="login-form">
       <form name="login" action="#" method="post" id="loginForm">
