--- a/SmartPeopleUI/web/index.html
+++ b/SmartPeopleUI/web/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
    <title>Smart People</title>
+   <link rel="stylesheet" href="main.css"/>
    <script async src="main.dart" type="application/dart"></script>
    <script async src="packages/browser/dart.js"></script>
 </head>
