[Phase1] Adjusted material design in some cases

--- a/SmartPeopleUI/lib/welcome/account-managment/change-password/change-password-view.html
+++ b/SmartPeopleUI/lib/welcome/account-managment/change-password/change-password-view.html
@@ -4,31 +4,31 @@
          <div class="popup">
             <form name="change-password-form" action="#" method="post" id="change-password-form">
                <div class="change-wrapper">
-                  <h4>Изменение пароля</h4>
+                  <h4>Change password</h4>
                </div>
                <div class="change-wrapper">
-                  <h6>Пожалуйста, укажите ваш новый пароль</h6>
+                  <h6>Please insert a new password</h6>
                </div>
                <div class="change-wrapper">
                   <div class="change-input-wrapper">
                      <div class="fixed-label">
-                        <label for="new-pswd">Новый пароль:</label>
+                        <label for="new-pswd">New password:</label>
                      </div>
-                     <input type="password" name="new-pswd" id="new-pswd" placeholder="Введите новый пароль"/>
+                     <input type="password" name="new-pswd" id="new-pswd" placeholder="Insert a new password here"/>
                      <span class="help-new-pswd"></span>
                   </div>
                </div>
                <div class="change-wrapper">
                   <div class="change-input-wrapper">
                      <div class="fixed-label">
-                        <label for="repeat-pswd">Повторите пароль:</label>
+                        <label for="repeat-pswd">Repeat password:</label>
                      </div>
-                     <input type="password" name="rpt-pswd" id="repeat-pswd" placeholder="Повторите пароль"/>
+                     <input type="password" name="rpt-pswd" id="repeat-pswd" placeholder="Repeat password"/>
                      <span class="help-rpt-pswd"></span>
                   </div>
                </div>
                <div class="input-submit-wrapper">
-                  <input type="submit" value="Изменить пароль"/>
+                  <input type="submit" value="Change password"/>
                </div>
             </form>
          </div>
