--- a/SmartPeopleUI/lib/welcome/account-managment/sign-up/sign-up-view.html
+++ b/SmartPeopleUI/lib/welcome/account-managment/sign-up/sign-up-view.html
@@ -1,50 +1,50 @@
-<div class="content">
+<div class="content clearfix">
    <div class="wrapped">
       <div class="content-logo clearfix"></div>
       <div class="registration-form">
          <form name="reg_form" action="#" method="post" class="registration">
             <div class="r-input-wrapper">
                <div class="r-header">
-                  <h3 class="pointer">Регистрация</h3>
+                  <h3 class="pointer">Sign Up</h3>
                </div>
             </div>
             <div class="r-input-wrapper clearfix">
                <div class="input name-surname name border">
-                  <input type="text" placeholder="Ваше Имя" name="name"/>
+                  <input type="text" placeholder="Name" name="name"/>
                </div>
                <div class="input name-surname surname border">
-                  <input type="text" placeholder="Ваша Фамилия" name="surname"/>
+                  <input type="text" placeholder="Surname" name="surname"/>
                </div>
             </div>
             <div class="r-input-wrapper">
                <div class="input email border">
-                  <input type="text" placeholder="Ваш адресс электронной почты" name="login"/>
+                  <input type="text" placeholder="Email" name="login"/>
                </div>
             </div>
             <div class="r-input-wrapper">
                <div class="input password1 border">
-                  <input type="password" placeholder="Ваш пароль" name="password1"/>
+                  <input type="password" placeholder="Password" name="password1"/>
                </div>
             </div>
             <div class="r-input-wrapper">
                <div class="input password2 border">
-                  <input type="password" placeholder="Повторите ваш пароль"  name="password2"/>
+                  <input type="password" placeholder="Repeat password"  name="password2"/>
                </div>
             </div>
             <div class="r-input-wrapper clearfix sex_border">
                <div class="input ">
-                  <div class="sex">
-                     <input type="radio" name="sex" value="male" id="male"/>
-                     <label for="male">Мужской</label>
+                  <div class="gender">
+                     <input type="radio" name="gender" value="male" id="male"/>
+                     <label for="male">Male</label>
                   </div>
-                  <div class="sex">
-                     <input type="radio" name="sex" value="female" id="female"/>
-                     <label for="female">Женский</label>
+                  <div class="gender">
+                     <input type="radio" name="gender" value="female" id="female"/>
+                     <label for="female">Female</label>
                   </div>
                </div>
             </div>
             <div class="r-input-wrapper">
-               <input type="submit" value="Регистрация" class="sign-up-btn" />
+               <button mdRaisedButton class="custom-md-success" class="custom-md-success sign-up-btn">Sign up</button>
             </div>
          </form>
       </div>
