--- a/SmartPeopleUI/lib/welcome/account-managment/restore-access/restore-access-view.html
+++ b/SmartPeopleUI/lib/welcome/account-managment/restore-access/restore-access-view.html
@@ -5,10 +5,10 @@
             <form name="restore-access-form" action="#" method="post">
                <input type="hidden" name="user-cache" value=""/>
                <div class="restore-wrapper">
-                  <h4>Восстановление доступа к странице</h4>
+                  <h4>Account access restoring</h4>
                </div>
                <div class="restore-wrapper">
-                  <h6>Пожалуйста, укажите свой Email для восстановления доступа.</h6>
+                  <h6>Please, input your email to restore access</h6>
                </div>
                <div class="restore-wrapper">
                   <div class="restore-input-wrapper">
@@ -16,11 +16,11 @@
                         <label for="restore-access">Email:</label>
                      </div>
                      <input type="text" name="login" id="restore-access" class="rEmail"
-                            placeholder="Введите адресс электронной почты"/>
+                            placeholder="Insert email here"/>
                   </div>
                </div>
                <div class="input-submit-wrapper">
-                  <a [routerLink]="['ChangePassword']">Далее</a>
+                  <a mdRaisedButton class="md-primary smart-next-btn" [routerLink]="['ChangePassword']">Next</a>
                </div>
             </form>
          </div>
