--- a/SmartPeopleUI/lib/welcome/account-managment/restore-access/restore-access-view.html
+++ b/SmartPeopleUI/lib/welcome/account-managment/restore-access/restore-access-view.html
@@ -12,15 +12,21 @@
                </div>
                <div class="restore-wrapper">
                   <div class="restore-input-wrapper">
-                     <div class="fixed-label">
-                        <label for="restore-access">Email:</label>
-                     </div>
-                     <input type="text" name="login" id="restore-access" class="rEmail"
+
+                     <input type="text"
+                            name="login"
+                            id="restore-access"
+                            class="rEmail"
                             placeholder="Insert email here"/>
+
                   </div>
                </div>
-               <div class="input-submit-wrapper">
-                  <a mdRaisedButton class="md-primary smart-next-btn" [routerLink]="['ChangePassword']">Next</a>
+               <div class="restore-wrapper">
+
+                  <a mdRaisedButton
+                     class="md-primary smart-next-btn"
+                     [routerLink]="['ChangePassword']">Next</a>
+
                </div>
             </form>
          </div>
