Restructured root component. Temporary turned off styles - need to solve less compilation for isolated components.

--- a/SmartPeopleUI/web/index.html
+++ b/SmartPeopleUI/web/index.html
@@ -7,6 +7,6 @@
    <script async src="packages/browser/dart.js"></script>
 </head>
 <body>
-   <my-app>Project is starting...</my-app>
+   <sp-app>Загрузка...</sp-app>
 </body>
 </html>
