Added info and restore components

--- a/SmartPeopleUI/web/index.html
+++ b/SmartPeopleUI/web/index.html
@@ -7,6 +7,6 @@
    <script async src="packages/browser/dart.js"></script>
 </head>
 <body>
-   <sp-app>Загрузка...</sp-app>
+   <sp-app>Loading...</sp-app>
 </body>
 </html>
