--- a/SmartPeopleUI/web/index.html
+++ b/SmartPeopleUI/web/index.html
@@ -3,6 +3,7 @@
 <head>
    <title>Smart People</title>
    <link rel="stylesheet" href="main.css"/>
+   <link rel="shortcut icon" href="images/favi-icon.png"/>
    <script async src="main.dart" type="application/dart"></script>
    <script async src="packages/browser/dart.js"></script>
 </head>
