[SP-39] Fix travis config, attempt 5

--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,7 @@
    <title>Smart People</title>
    <link rel="stylesheet" href="main.css"/>
    <link rel="shortcut icon" href="images/favicon.png"/>
+   <script src="packages/shadow_dom/shadow_dom.min.js"></script>
    <script async src="main.dart" type="application/dart"></script>
    <script async src="packages/browser/dart.js"></script>
 </head>
