--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
    <link rel="stylesheet" href="main.css"/>
    <link rel="shortcut icon" href="images/favicon.png"/>
    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.blue-deep_purple.min.css">
+   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.deep_purple-yellow.min.css">
    <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
    <script src="packages/shadow_dom/shadow_dom.min.js"></script>
    <script async src="main.dart" type="application/dart"></script>
